--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <header>
         <div class="row">
             <div class="logo">
-                <img src="Logo.png">
+                <img src="logo.png">
             </div>
             <div class="main-nav">
             <ul >
