--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>orphan age home</title>
+<title>Poornima University CTF</title>
 <link href="orphan.css" rel="stylesheet" type="text/css">
 </head>
 <body>
