--- a/Network.html
+++ b/Network.html
@@ -18,7 +18,7 @@
 <p style="color:White">An authenticated file exchange achieved through <a href="cl" download='true'>FTP</a>. Recover the password used by the user.</p>
 
 <h1 style="color:Green">Challenge:2</h1>
-<p style="color:White">Twitter</p>
+<p style="color:White">Social Media</p>
 <p style="color:White">A Auth session has been captured : retrieve the <a href="cl" download='true'>password</a>.</p>
 
 
