--- a/Network.html
+++ b/Network.html
@@ -15,11 +15,11 @@
 
 <h1 style="color:Green">Challenge:1</h1>
 <p style="color:White">FTP:Packet capture analysis</p>
-<p style="color:White">An authenticated file exchange achieved through <a href="cl" download='true'>FTP</a>. Recover the password used by the user.</p>
+<p style="color:White">An authenticated file exchange achieved through <a href="ch1.pcap" download='true'>FTP</a>. Recover the password used by the user.</p>
 
 <h1 style="color:Green">Challenge:2</h1>
 <p style="color:White">Social Media</p>
-<p style="color:White">A Auth session has been captured : retrieve the <a href="cl" download='true'>password</a>.</p>
+<p style="color:White">A Auth session has been captured : retrieve the <a href="ch3.pcap" download='true'>password</a>.</p>
 
 
 
